# trailhub

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  appdesc.yml  docker-compose.yaml  pyproject.toml
.github/actions/cache-package/: action.yml
.github/workflows/: ci.yaml
monitoring/alertmanager/: config.yml
monitoring/prometheus/: prometheus.yml
src/: endpoint.py  main.py  router.py  run.py
src/common/config/: __init__.py  database.py  mongo_client.py
src/common/helpers/: error_codes.py  exception.py  utils.py
src/config/: settings.py
src/models/: __init__.py  model.py  schema.py
tests/: .test.env  conftest.py
tests/api/: test_endpoint.py
